v3.7.1-rc.1 (XXXX-XX-XX)
------------------------

* Allow AQL queries on DB-Servers again. This is not an official supported
  feature, but is sometimes used for debugging. Previous changes made it
  impossible to run a query on a local shard.

* Fix restoring old arangodumps from ArangoDB 3.3 and before, which had index
  information stored in slightly different places in the dump.

* Fix internal test helper function `removeCost` to really remove costs.

* Fix invalid calls to `AgencyCommResult::slice()` method, which must only be
  made in case of an agency result was retrieved successfully. In case the call
  to the agency was not successful, `slice()` must not be called on it. This
  change makes sure this invariant holds true.

* Fix potential AQL query shutdown hanger.

* Modified the exception handling in the RestHandler. Asynchronous communication
  could lead to less detailed failure information.

* Use smarter default value preset in web UI for replication factor in case
  there are constraints established for the replication factor by the startup
  options `--cluster.min-replication-factor` and
  `--cluster.max-replication-factor`.

* Added permissions check before trying to read data from `_analyzers`
  collection.
  If these permissions are not there, no load is performed (user can not use
  analyzers from database anyway).

* Updated arangosync to 0.7.6.

* Make the reboot tracker catch a failed server and permanently removed servers.
  This allows other servers in the cluster to move on more quickly, when a
  server fails and does not immediately come back.

* Added WCC pregel algorithm for weakly connected components.

* Display "geoJson" value for geo indexes in index overview in web UI.

* Allow specifiying arbitrary vertex attributes when creating a vertex via the
  graph viewer in the web UI. This is necessary for collections that have a
  schema and that require new vertices to have certain attributes/values.
