@@ -45,7 +45,8 @@ class ClusterInfo;
 
 namespace network {
 
-using ConnectionPtr = std::shared_ptr<fuerte::Connection>;
+// using ConnectionPtr = std::shared_ptr<fuerte::Connection>;
+class ConnectionPtr;
 
 /// @brief simple connection pool managing fuerte connections
 #ifdef ARANGODB_USE_GOOGLE_TESTS
@@ -55,6 +56,7 @@ class ConnectionPool final {
 #endif
  protected:
   struct Connection;
+  friend class ConnectionPtr;
 
  public:
   struct Config {
@@ -101,8 +103,13 @@ class ConnectionPool final {
  protected:
 
   struct Context {
+    Context(std::shared_ptr<fuerte::Connection>,
+            std::chrono::steady_clock::time_point, std::size_t);
+
     std::shared_ptr<fuerte::Connection> fuerte;
-    std::chrono::steady_clock::time_point leased; /// last time leased
+    std::chrono::steady_clock::time_point lastLeased;  /// last time leased
+    std::atomic<std::size_t> leases;  // number of active users, including those
+                                      // who may not have sent a request yet
   };
 
   /// @brief endpoint bucket
@@ -112,11 +119,11 @@ class ConnectionPool final {
     //    uint64_t bytesSend;
     //    uint64_t bytesReceived;
     //    uint64_t numRequests;
-    containers::SmallVector<Context>::allocator_type::arena_type arena;
-    containers::SmallVector<Context> list{arena};
+    containers::SmallVector<std::shared_ptr<Context>>::allocator_type::arena_type arena;
+    containers::SmallVector<std::shared_ptr<Context>> list{arena};
   };
 
-  TEST_VIRTUAL ConnectionPtr createConnection(fuerte::ConnectionBuilder&);
+  TEST_VIRTUAL std::shared_ptr<fuerte::Connection> createConnection(fuerte::ConnectionBuilder&);
   ConnectionPtr selectConnection(std::string const& endpoint, Bucket& bucket);
   
  private:
@@ -127,6 +134,24 @@ class ConnectionPool final {
 
   /// @brief contains fuerte asio::io_context
   fuerte::EventLoopService _loop;
+};
+
+class ConnectionPtr {
+ public:
+  ConnectionPtr(std::shared_ptr<ConnectionPool::Context>&);
+  ConnectionPtr(ConnectionPtr&&);
+  ConnectionPtr(ConnectionPtr const&) = delete;
+  ~ConnectionPtr();
+
+  ConnectionPtr operator=(ConnectionPtr&&) = delete;
+  ConnectionPtr operator=(ConnectionPtr const&) = delete;
+
+  fuerte::Connection& operator*() const;
+  fuerte::Connection* operator->() const;
+  fuerte::Connection* get() const;
+
+ private:
+  std::shared_ptr<ConnectionPool::Context> _context;
 };
 
 }  // namespace network
